# DiskLens-Qt

./: .gitignore  CMakeLists.txt  SKILL.md  resources.qrc
.github/workflows/: build-windows.yml  build.yml
src/: main.cpp
src/app/: SettingsManager.cpp  SettingsManager.h
src/core/models/: FileSystemNode.cpp  FileSystemNode.h  VolumeInfo.h
src/core/services/: DuplicateService.cpp  DuplicateService.h  ExportService.cpp  ExportService.h  FileOperationService.cpp  FileOperationService.h  FileTypeService.cpp  FileTypeService.h  LargeFileService.cpp  LargeFileService.h  OrganizerService.cpp  OrganizerService.h  ScanService.cpp  ScanService.h  SearchService.cpp  SearchService.h  TemplateService.cpp  TemplateService.h  VolumeService.cpp  VolumeService.h
src/core/utils/: CategoryMapper.h
src/platform/: DriveClassificationService.h  ShellIntegrationService.cpp  ShellIntegrationService.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/dialogs/: ExportDialog.cpp  ExportDialog.h
src/ui/views/: AdvancedSearchView.cpp  AdvancedSearchView.h  DashboardView.cpp  DashboardView.h  DuplicatesView.cpp  DuplicatesView.h  FileTypesView.cpp  FileTypesView.h  LargeFilesView.cpp  LargeFilesView.h  OrganizerView.cpp  OrganizerView.h  SearchOrganizerView.cpp  SearchOrganizerView.h  TemplatesView.cpp  TemplatesView.h  TreemapView.cpp  TreemapView.h
src/ui/widgets/: DonutChartWidget.cpp  DonutChartWidget.h  RadialGauge.cpp  RadialGauge.h  TreemapWidget.cpp  TreemapWidget.h
styles/: dark_theme.qss
